<resources>
    <string name="app_name">Furnitale</string>

    <!--activity_splash-->
    <string name="logo_splash">Logo Splash</string>
    <string name="title_splash">Title Splash</string>
    <string name="subtitle_splash">Subtitle Splash</string>

    <!--activity_sign_in-->
    <string name="title_sign_in">Login</string>
    <string name="email_and_number">Email or Phone Number</string>
    <string name="login_sign_in">Login</string>
    <string name="register_account">Do not have an account?</string>
    <string name="register_click">Register</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login_decision">or login with</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>

    <!--Fragments-->
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>

    <!--Fragment Welcome-->
    <string name="hello_home">This is home fragment</string>
    <string name="hello_chat">This is chat fragment</string>
    <string name="hello_cart">This is cart fragment</string>
    <string name="hello_account"> This is account fragment</string>
    <string name="hello_living_room">This is living room fragment</string>
    <string name="hello_bed_room">This is bed room fragment</string>
    <string name="hello_kitchen_room">This is kitchen fragment</string>
    <string name="hello_bath_room">This is bathroom fragment</string>
    <string name="hello_outdoor">This is outdoor fragment</string>
    <string name="hello_accessories">This is accessories fragment</string>

    <!--account_fragment-->
    <string name="title_account">Account</string>
    <string name="profile_name">Nama :</string>
    <string name="member_since">Member Since</string>
    <string name="buy">My Purchases</string>
    <string name="logout">Logout</string>
    <string name="pay">Pay</string>
    <string name="packing">Packing</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="settings">Settings</string>
    <string name="address_list">Address List</string>
    <string name="preference">Preference</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="terms_amp_policy_privacy"><![CDATA[Terms & Policy Privacy]]></string>
    <string name="contact_us">Contact Us</string>

    <!--detail activity-->
    <string name="city">Dikirim dari</string>
    <string name="about">Product Description</string>
    <string name="rating">Product Rating</string>
    <string name="detail_chat">Chat</string>
    <string name="detail_add_to_cart">+ Add To Cart</string>

    <!--default_layout-->
    <string name="feature_unavailable">This Feature Is Unavailable</string>
    <string name="visit_store">Visit Store</string>
    <string name="password">Password</string>
    <string name="delete">Delete</string>
    <string name="subtotal">Subtotal</string>
    <string name="payment_total">PAYMENT TOTAL</string>
    <string name="empty_cart">YOUR CART STILL EMPTY ADD SOME PRODUCTS</string>


    <!--show state-->
    <string name="message_if_null">Data Not Found</string>
</resources>