<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".ui.SignInActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/title_sign_in"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="16pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/logo_splash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"/>

    <EditText
        android:id="@+id/verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/email_and_number"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/login_sign_in"
        android:textAlignment="center"
        android:textSize="6pt"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verification"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/tv_login_decision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_decision"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.048" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/ib_login_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/google"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_decision"/>

   <!-- <ImageButton
        android:id="@+id/ib_login_facebook"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648" />-->

    <Button
        android:id="@+id/btn_register_account"
        android:layout_width="202dp"
        android:layout_height="38dp"
        android:text="@string/register_account"
        android:textSize="4pt"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

    <Button
        android:id="@+id/btn_forget_password"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/forget_password"
        android:textSize="4pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797" />

</androidx.constraintlayout.widget.ConstraintLayout>