<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_marginTop="16dp"
            android:layout_marginStart="64dp"
            android:padding="6dp"
            android:textSize="6pt"
            android:textColor="@android:color/white"
            android:background="@color/color_primary"
            android:fontFamily="@font/inder"
            app:layout_constraintCircleRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/ib_address_list"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="16dp"
            android:background="@drawable/ic_address_list"
            app:layout_constraintEnd_toEndOf="@+id/tv_settings"
            app:layout_constraintStart_toStartOf="@+id/tv_settings"
            app:layout_constraintTop_toBottomOf="@+id/tv_settings" />

        <TextView
            android:id="@+id/tv_address_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_list"
            android:textSize="6pt"
            android:layout_margin="16dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:fontFamily="@font/inder"
            app:layout_constraintBottom_toBottomOf="@+id/ib_address_list"
            app:layout_constraintStart_toEndOf="@+id/ib_address_list"
            app:layout_constraintTop_toTopOf="@+id/ib_address_list" />

        <View
            android:id="@+id/view_separated_address_preference"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_text_dark_green"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/ib_address_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageButton
            android:id="@+id/ib_preference"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="16dp"
            android:background="@drawable/ic_preference"
            app:layout_constraintEnd_toEndOf="@+id/ib_address_list"
            app:layout_constraintStart_toStartOf="@+id/ib_address_list"
            app:layout_constraintTop_toBottomOf="@+id/view_separated_address_preference" />

        <TextView
            android:id="@+id/tv_preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preference"
            android:textSize="6pt"
            android:layout_margin="16dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:fontFamily="@font/inder"
            app:layout_constraintBottom_toBottomOf="@+id/ib_preference"
            app:layout_constraintStart_toEndOf="@+id/ib_preference"
            app:layout_constraintTop_toTopOf="@+id/ib_preference" />

        <TextView
            android:id="@+id/tv_help_and_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:padding="6dp"
            android:text="@string/help_amp_support"
            android:textColor="@android:color/white"
            android:textSize="6pt"
            android:fontFamily="@font/inder"
            android:background="@color/color_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_preference" />

        <ImageButton
            android:id="@+id/ib_terms_and_policy"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_term_and_policy"
            app:layout_constraintEnd_toEndOf="@+id/ib_preference"
            app:layout_constraintStart_toStartOf="@+id/ib_preference"
            app:layout_constraintTop_toBottomOf="@id/tv_help_and_support"/>

        <TextView
            android:id="@+id/tv_terms_and_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/terms_amp_policy_privacy"
            android:textSize="6pt"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ib_terms_and_policy"
            app:layout_constraintStart_toEndOf="@+id/ib_terms_and_policy"
            app:layout_constraintTop_toTopOf="@+id/ib_terms_and_policy" />

        <View
            android:id="@+id/view_separated_terms_and_contact"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="@color/color_text_dark_green"
            app:layout_constraintTop_toBottomOf="@id/ib_terms_and_policy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageButton
            android:id="@+id/ib_contact_us"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_contact_us"
            app:layout_constraintEnd_toEndOf="@+id/ib_terms_and_policy"
            app:layout_constraintStart_toStartOf="@+id/ib_terms_and_policy"
            app:layout_constraintTop_toBottomOf="@+id/view_separated_terms_and_contact"/>

        <TextView
            android:id="@+id/tv_contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:layout_margin="16dp"
            android:textSize="6pt"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ib_contact_us"
            app:layout_constraintStart_toEndOf="@+id/ib_contact_us"
            app:layout_constraintTop_toTopOf="@+id/ib_contact_us" />


        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_margin="32dp"
            app:mfb_text="@string/logout"
            app:mfb_textColor="@color/color_accent"
            app:mfb_textSize="7pt"
            app:mfb_borderColor="@color/color_accent"
            app:mfb_borderWidth="4dp"
            app:mfb_radius="8dp"
            app:mfb_defaultColor="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_contact_us"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>