<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.detail.DetailFragment">

    <data>
        <variable
            name="data"
            type="com.raion.furnitale.core.domain.model.Product"/>
    </data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/abc_vector_test"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_image_product"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:text="@{data.title}"
            app:layout_constraintStart_toStartOf="@+id/ib_favorite"
            app:layout_constraintTop_toBottomOf="@+id/iv_image_product"
            tools:text="Ini Judul" />

        <TextView
            android:id="@+id/tv_subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{data.subTitle}"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="Ini Subtitle" />

        <ImageButton
            android:id="@+id/ib_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@android:drawable/btn_star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_image_product" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@{data.price}"
            app:layout_constraintStart_toStartOf="@+id/ib_favorite"
            app:layout_constraintTop_toBottomOf="@+id/tv_subTitle"
            tools:text="Ini Harga" />

        <ImageButton
            android:id="@+id/iv_image_seller"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/ic_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_price" />

        <TextView
            android:id="@+id/tv_storeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{data.storeName}"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/iv_image_seller"
            app:layout_constraintTop_toTopOf="@+id/iv_image_seller"
            tools:text="Ini Nama Toko"/>

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@{data.city}"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_dikirim_dari"
            app:layout_constraintStart_toEndOf="@+id/tv_dikirim_dari"
            app:layout_constraintTop_toTopOf="@+id/tv_dikirim_dari"
            tools:text="ini city" />

        <ImageButton
            android:id="@+id/ib_visit_store"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_launcher_background"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_image_seller"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_image_seller" />

        <TextView
            android:id="@+id/tv_dikirim_dari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_image_seller"
            app:layout_constraintStart_toEndOf="@+id/iv_image_seller" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_image_seller"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{data.description}"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/tv_about"
            app:layout_constraintTop_toBottomOf="@+id/tv_about"
            tools:text="deskripsi disini"/>

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:layout_marginBottom="64dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/ib_quality"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_launcher_background"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageButton
            android:id="@+id/ib_packing_detail"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:layout_marginStart="48dp"
            android:background="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="@+id/ib_quality"
            app:layout_constraintStart_toEndOf="@id/ib_quality"
            app:layout_constraintTop_toTopOf="@+id/ib_quality" />

        <ImageButton
            android:id="@+id/ib_price"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:layout_marginStart="48dp"
            android:background="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="@+id/ib_packing_detail"
            app:layout_constraintStart_toEndOf="@+id/ib_packing_detail"
            app:layout_constraintTop_toTopOf="@+id/ib_packing_detail" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>